--- a/src/config.h.in
+++ b/src/config.h.in
@@ -11,8 +11,8 @@
  * MultiDimInte is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
  * warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
  * details.
-
- * You should have received a copy of the GNU General Public License along with Foobar.  If not, see
+ *
+ * You should have received a copy of the GNU General Public License along with MultiDimInte.  If not, see
  * <http://www.gnu.org/licenses/>.
  */
 
