--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -38,7 +38,7 @@ PROJECT_NAME           = "Multidiminte"
 # could be handy for archiving the generated documentation or if some version
 # control system is used.
 
-PROJECT_NUMBER         =
+PROJECT_NUMBER         = @multidiminte_VERSION_MAJOR@.@multidiminte_VERSION_MINOR@.@multidiminte_VERSION_SUBMINOR@@multidiminte_VERSION_SUFFIX@
 
 # Using the PROJECT_BRIEF tag one can provide an optional one line description
 # for a project that appears at the top of each page and should give viewer a
